--- a/index.html
+++ b/index.html
@@ -8,154 +8,132 @@
         * { box-sizing: border-box; }
 
         :root {
-            --primary: #1a2a3a;
-            --gold: #c5a059;
-            --glass-bg: rgba(26, 42, 58, 0.65);
+            --primary: #1a2a3a;       /* 經典深藍色 */
+            --gold: #c5a059;          /* 質感金色 */
+            /* 調高透明度：將 alpha 從 0.75 降至 0.45 */
+            --glass-bg: rgba(26, 42, 58, 0.2); 
             --line-color: rgba(255, 255, 255, 0.15);
         }
 
         body { 
             font-family: "PingFang TC", "Microsoft JhengHei", sans-serif; 
-            margin: 0; 
-            color: #fff; 
-            scroll-behavior: smooth;
-            background-color: #000;
-            overflow-x: hidden;
+            margin: 0; color: #fff; background-color: #000; overflow-x: hidden;
         }
 
         /* --- 背景動態區 --- */
         .bg-motion-container {
-            position: fixed;
-            top: 0; left: 0; 
-            width: 120%; 
-            height: 100%;
-            z-index: -2;
+            position: fixed; top: 0; left: 0; width: 125%; height: 100%; z-index: -2;
             background-image: url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?q=80&w=2070&auto=format&fit=crop');
-            background-size: cover;
-            background-position: center;
+            background-size: cover; background-position: center;
             animation: backgroundPan 90s linear infinite alternate;
         }
-
         .bg-edge-glow {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            z-index: -1;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;
             background: inherit;
             -webkit-mask-image: radial-gradient(circle, rgba(0,0,0,0) 40%, rgba(0,0,0,1) 100%);
             mask-image: radial-gradient(circle, rgba(0,0,0,0) 40%, rgba(0,0,0,1) 100%);
             animation: edgePulse 10s ease-in-out infinite alternate;
             pointer-events: none;
         }
+        @keyframes backgroundPan { from { transform: translateX(0); } to { transform: translateX(-10%); } }
+        @keyframes edgePulse { 0% { filter: brightness(0.3); opacity: 0.5; } 100% { filter: brightness(0.7); opacity: 1; } }
 
-        @keyframes backgroundPan {
-            from { transform: translateX(0); }
-            to { transform: translateX(-10%); }
-        }
-
-        @keyframes edgePulse {
-            0% { filter: brightness(0.3) contrast(1.2); opacity: 0.5; }
-            100% { filter: brightness(0.8) contrast(1.5); opacity: 1; }
-        }
-
-        /* --- 導覽列 --- */
+        /* --- 導覽列：Logo 藝術化 --- */
         nav { 
-            background: rgba(0, 0, 0, 0.85);
-            padding: 20px 5%; 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            position: fixed; 
-            width: 100%; top: 0; z-index: 1000; 
-            border-bottom: 1px solid var(--line-color);
-            backdrop-filter: blur(10px);
+            background: rgba(0, 0, 0, 0.9); padding: 15px 5%; 
+            display: flex; justify-content: space-between; align-items: center; 
+            position: fixed; width: 100%; top: 0; z-index: 1000; 
+            border-bottom: 1px solid var(--line-color); backdrop-filter: blur(10px);
         }
-        .logo { font-size: 1.4rem; font-weight: bold; color: #fff; letter-spacing: 3px; }
-        .nav-links a { text-decoration: none; color: #fff; margin-left: 25px; font-weight: 500; transition: 0.3s; opacity: 0.8; }
-        .nav-links a:hover { color: var(--gold); opacity: 1; }
 
-        section { padding: 140px 10% 80px; width: 100%; }
+        .logo-container { display: flex; flex-direction: column; width: fit-content; }
+        .logo-main { 
+            font-size: 1.5rem; font-weight: bold; 
+            letter-spacing: 0.8rem; 
+            line-height: 1.2; text-align: justify;
+            margin-right: -0.8rem; 
+        }
+        .logo-sub { 
+            font-size: 0.65rem; color: var(--gold); opacity: 0.9;
+            font-family: "Georgia", serif; 
+            letter-spacing: 0.05rem;
+            text-align: justify;
+            text-align-last: justify; 
+            margin-top: 5px;
+            text-transform: uppercase;
+        }
+
+        .nav-links a { text-decoration: none; color: #fff; margin-left: 20px; font-size: 0.95rem; opacity: 0.8; }
+
+        /* --- 內容區域 --- */
+        section { padding: 80px 10%; } 
+        
+        #projects { margin-top: 15vh; } 
 
         .content-card {
-            background: var(--glass-bg);
-            padding: 60px;
-            border-radius: 15px;
-            box-shadow: 0 15px 35px rgba(0,0,0,0.5);
-            backdrop-filter: blur(20px); 
+            background: var(--glass-bg); padding: 60px; border-radius: 15px;
+            /* 增強模糊效果配合高透明度 */
+            backdrop-filter: blur(25px); 
             border: 1px solid rgba(255,255,255,0.1);
         }
 
-        .section-header { text-align: left; margin-bottom: 50px; border-left: 2px solid var(--gold); padding-left: 20px; }
+        .section-header { border-left: 2px solid var(--gold); padding-left: 20px; margin-bottom: 50px; }
         .section-header h2 { font-size: 2.2rem; color: var(--gold); margin: 0; letter-spacing: 6px; }
-        .section-header p { font-size: 0.9rem; margin-top: 8px; color: rgba(255,255,255,0.6); letter-spacing: 4px; }
 
-        /* --- 案例介紹：立即回位優化 --- */
+        /* --- 案例介紹 --- */
         .project-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 35px; }
-        
         .project-item { 
-            position: relative; 
-            cursor: pointer; 
-            border-radius: 10px; 
-            overflow: hidden; 
-            height: 480px; 
-            box-shadow: 0 10px 20px rgba(0,0,0,0.3); 
-            border: 1px solid rgba(255,255,255,0.1);
-            background: #000;
+            position: relative; border-radius: 10px; overflow: hidden; height: 480px; 
+            background: #000; border: 1px solid rgba(255,255,255,0.1);
         }
-
-        /* 預設圖片狀態：沒有 transition，移開滑鼠時會立即回位 */
         .project-item img { 
-            width: 100%; 
-            height: 180%; 
-            object-fit: cover; 
-            opacity: 0.6; 
-            position: absolute;
-            bottom: 0; 
-            left: 0;
-            transform: translateY(0);
+            width: 100%; height: 180%; object-fit: cover; position: absolute; bottom: 0; left: 0; opacity: 0.6;
         }
 
-        /* 當滑鼠移入時才加入 6秒慢慢滑動的 transition */
-        .project-item:hover img { 
-            opacity: 1; 
-            transform: translateY(40%); 
-            transition: transform 6s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s;
+        @media (min-width: 1025px) {
+            .project-item:hover img { 
+                opacity: 1; transform: translateY(40%); 
+                transition: transform 6s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s;
+            }
         }
 
-        .project-item:hover { border-color: var(--gold); }
+        @media (max-width: 1024px) {
+            #projects { margin-top: 12vh; }
+            section { padding: 60px 5%; }
+            .content-card { padding: 30px; }
+            .project-item img { opacity: 0.9; animation: mobileAutoPreview 12s ease-in-out infinite alternate; }
+        }
+        @keyframes mobileAutoPreview { 0% { transform: translateY(0); } 100% { transform: translateY(35%); } }
 
         .project-info { 
             position: absolute; bottom: 0; width: 100%; 
             background: linear-gradient(transparent, rgba(0,0,0,0.95)); 
-            color: #fff; padding: 30px; 
-            z-index: 2;
+            padding: 30px; z-index: 2; 
         }
+        .project-info h3 { color: #ffffff !important; margin: 0; font-size: 1.4rem; }
+        .project-info p { color: rgba(255, 255, 255, 0.8) !important; margin-top: 5px; }
 
         /* --- 其他區塊 --- */
         .tabs { display: flex; border-bottom: 1px solid rgba(255,255,255,0.2); margin-bottom: 30px; }
-        .tab-btn { padding: 15px 35px; border: none; background: none; cursor: pointer; font-size: 1.1rem; color: rgba(255,255,255,0.5); }
-        .tab-btn.active { color: var(--gold); border-bottom: 3px solid var(--gold); font-weight: bold; }
-        .tab-content { display: none; padding: 20px 0; line-height: 2; font-size: 1.1rem; animation: fadeIn 0.8s; }
+        .tab-btn { padding: 15px 30px; color: rgba(255,255,255,0.5); background: none; border: none; cursor: pointer; }
+        .tab-btn.active { color: var(--gold); border-bottom: 2px solid var(--gold); }
+        .tab-content { display: none; padding: 20px 0; line-height: 2; }
         .tab-content.active { display: block; }
 
-        .contact-container { max-width: 600px; }
-        .form-group { margin-bottom: 22px; }
-        .form-group label { display: block; margin-bottom: 10px; font-weight: bold; color: var(--gold); font-size: 0.9rem; }
+        .contact-container { max-width: 600px; margin-top: 30px; }
+        .form-group { margin-bottom: 20px; }
+        .form-group label { display: block; margin-bottom: 10px; color: var(--gold); font-size: 0.9rem; font-weight: bold; }
         .form-group input, .form-group textarea, .form-group select { 
             width: 100%; padding: 15px; border: 1px solid rgba(255,255,255,0.2); 
-            border-radius: 4px; font-size: 1rem; background: rgba(0,0,0,0.2); color: #fff; outline: none;
+            background: rgba(0,0,0,0.2); color: #fff; border-radius: 4px; outline: none;
         }
-        .form-group select option { background: #1a2a3a; }
-
         .submit-btn { 
-            width: 100%; padding: 20px; background: var(--gold); color: #fff; border: none; border-radius: 4px; 
-            font-size: 1.1rem; font-weight: bold; cursor: pointer; transition: 0.4s;
-            letter-spacing: 5px; margin-top: 10px;
+            width: 100%; padding: 20px; background: var(--gold); color: #fff; border: none; 
+            letter-spacing: 5px; font-weight: bold; cursor: pointer; transition: 0.4s;
         }
         .submit-btn:hover { background: #ad8a4a; }
 
-        footer { text-align: center; padding: 80px 10%; background: rgba(0,0,0,0.9); color: #777; border-top: 1px solid var(--line-color); letter-spacing: 2px; }
-
-        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        footer { text-align: center; padding: 80px 10%; background: rgba(0,0,0,0.9); color: #777; border-top: 1px solid var(--line-color); }
     </style>
 </head>
 <body>
@@ -164,7 +142,10 @@
 <div class="bg-edge-glow" style="background-image: url('https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?q=80&w=2070&auto=format&fit=crop'); background-size: cover; background-position: center;"></div>
 
 <nav>
-    <div class="logo">哲邦建設 ZHE BANG</div>
+    <div class="logo-container">
+        <div class="logo-main">哲邦建設</div>
+        <div class="logo-sub">ZHE BANG CONSTRUCTION</div>
+    </div>
     <div class="nav-links">
         <a href="#projects">案例介紹</a>
         <a href="#services">客戶服務</a>
@@ -176,7 +157,6 @@
     <div class="content-card">
         <div class="section-header">
             <h2>經典學</h2>
-            <p>CLASSIC ARCHITECTURE</p>
         </div>
         <div class="project-grid">
             <a href="zhebang.html" style="text-decoration:none;">
@@ -203,56 +183,44 @@
 
 <section id="services">
     <div class="content-card">
-        <div class="section-header">
-            <h2>進行室</h2>
-            <p>ADVANCE SERVICE</p>
+        <div class="section-header"><h2>進行室</h2></div>
+        <div class="tabs">
+            <button class="tab-btn active" onclick="showTab(event, 's1')">售後維護</button>
+            <button class="tab-btn" onclick="showTab(event, 's2')">客製客變</button>
         </div>
-        <div class="service-tabs">
-            <div class="tabs">
-                <button class="tab-btn active" onclick="showTab(event, 's1')">售後維護</button>
-                <button class="tab-btn" onclick="showTab(event, 's2')">客製客變</button>
-                <button class="tab-btn" onclick="showTab(event, 's3')">品質保固</button>
-            </div>
-            <div id="s1" class="tab-content active">
-                <p>我們提供 24 小時快速報修機制，由哲邦專屬工班團隊直接服務。</p>
-            </div>
-            <div id="s2" class="tab-content">
-                <p>專業客變諮詢，協助您在結構安全範圍內調整居家動線。</p>
-            </div>
-            <div id="s3" class="tab-content">
-                <p>結構保固 15 年、防水 3 年。打造養身與養心兼具的住宅。</p>
-            </div>
+        <div id="s1" class="tab-content active">
+            <p>我們提供 24 小時快速報修機制，由哲邦專屬工班團隊直接服務。</p>
+        </div>
+        <div id="s2" class="tab-content">
+            <p>專業客變諮詢，協助您在結構安全範圍內調整居家動線。</p>
         </div>
     </div>
 </section>
 
 <section id="contact">
     <div class="content-card">
-        <div class="section-header">
-            <h2>鑄未來</h2>
-            <p>FUTURE COMMITMENT</p>
-        </div>
+        <div class="section-header"><h2>鑄未來</h2></div>
         <div class="contact-container">
-            <form action="https://formspree.io/f/your-id" method="POST">
+            <form>
                 <div class="form-group">
                     <label>您的姓名 NAME</label>
-                    <input type="text" name="name" required>
+                    <input type="text" placeholder="請輸入姓名">
                 </div>
                 <div class="form-group">
                     <label>聯絡電話 PHONE</label>
-                    <input type="tel" name="phone" required>
+                    <input type="tel" placeholder="請輸入電話">
                 </div>
                 <div class="form-group">
                     <label>諮詢類型 TYPE</label>
-                    <select name="type">
-                        <option value="建案諮詢">預售屋 / 建案諮詢</option>
-                        <option value="售後維修">售後報修服務</option>
-                        <option value="土地開發">土地合建洽談</option>
+                    <select>
+                        <option>預售屋 / 建案諮詢</option>
+                        <option>售後維修服務</option>
+                        <option>土地合建洽談</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label>需求訊息 MESSAGE</label>
-                    <textarea name="message" rows="4" required></textarea>
+                    <textarea rows="4" placeholder="請輸入內容"></textarea>
                 </div>
                 <button type="submit" class="submit-btn">SEND MESSAGE</button>
             </form>
